--- a/ionic/ionic/www/css/style.css
+++ b/ionic/ionic/www/css/style.css
@@ -9,6 +9,11 @@
     /*background: radial-gradient(ellipse at center, #cedce7 0%,#9EA6B1 100%);  W3C*/
     /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=1 );  IE6-9 fallback on horizontal gradient*/
 /*}*/
+*{
+    font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+}
+
+
 
 .width-100{
     width: 100%;
@@ -18,10 +23,58 @@
     height: 100%;
 }
 
-*{
-    font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+
+.margin-top-25-percent{
+    margin-top: 25%;
+}
+
+.small-margin-top{
+    margin-top: 5%;
 }
 
 .font-weight-lighter{
     font-weight: lighter;
+}
+.angular-google-map-container { height: 475px; }
+
+.round {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    vertical-align: top;
+}
+.round img {
+    display: block;
+    /* Stretch */
+          /*height: 100%;*/
+          width: 100%;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.gm-style-iw{
+    left: 0px !important;
+    top: 0px !important;
+    height: 120px;
+    width: 200px;
+}
+
+.trip-modal{
+    /*width: 110%;*/
+}
+
+div.trip-info{
+    padding-top: 0px;
+    padding-left: 7.5%;
+    padding-bottom: 0px;
+}
+
+div.destination-info{
+    width: 185px;
+}
+
+button.join-ride{
+    padding: 0 12px !important;
 }
