--- a/ionic/ionic/www/templates/tabs.html
+++ b/ionic/ionic/www/templates/tabs.html
@@ -13,14 +13,14 @@
 
 
   <!-- Friends Tab -->
-  <ion-tab title="Nearby Rides" icon="icon ion-model-s" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <ion-tab title="Nearby Rides" icon="icon ion-ios7-location" href="#/tab/nearby">
+    <ion-nav-view name="tab-nearby"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Account Tab -->
-  <ion-tab title="Matches" icon="icon ion-android-contacts" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Matches" icon="icon ion-android-social" href="#/tab/matches">
+    <ion-nav-view name="tab-matches"></ion-nav-view>
   </ion-tab>
 
 
