--- a/ionic/ionic/www/css/style.css
+++ b/ionic/ionic/www/css/style.css
@@ -77,4 +77,9 @@ div.destination-info{
 
 button.join-ride{
     padding: 0 12px !important;
+    font-size: larger;
+}
+
+button.join-ride::before{
+    margin-top: 3px !important;
 }
