--- a/ionic/ionic/www/dash/templates/tab-dash.html
+++ b/ionic/ionic/www/dash/templates/tab-dash.html
@@ -13,7 +13,7 @@
           <h5 class="text-center">To begin, sign in with Uber</h5>
 
         <div class="row">
-          <img ng-src="img/uber1.png" alt="" class="width-100 height-100"/>
+          <img ng-src="img/uber1.png" alt="" class="width-100 height-100" ng-click="login()"/>
         </div>
       </div>
 
