--- a/ionic/ionic/www/lib/ionic/scss/ionic.scss
+++ b/ionic/ionic/www/lib/ionic/scss/ionic.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 @import
-  // Ionicons //fix to get around icons not loading from ionic_and_overrides.scss
-//  "ionicons/ionicons.scss",
+  // Ionicons
+  "ionicons/ionicons.scss",
 
   // Variables
   "mixins",
