--- a/ionic/ionic/www/matches/templates/tripMatch.html
+++ b/ionic/ionic/www/matches/templates/tripMatch.html
@@ -105,7 +105,8 @@
   <div class="row"
        ng-if="tripMatch.requestInfo.accepted">
     <div class="margin-auto">
-      <button class="text-center button button-balanced meetup-request button-clear icon-left  ion-android-checkmark" ng-click="acceptRequest()">
+      <button class="text-center button button-balanced meetup-request button-clear icon-left  ion-android-checkmark"
+              ng-click="acceptRequest()">
         <!--<i class="icon placeholder-icon"></i>-->
         Accepted
       </button>
